# JATAPT

./: .gitignore  CMakeLists.txt  README.md
include/: alphanum.hpp
lib/src/: .gitignore
lib/src/crossguid-master/src/: guid.cpp
lib/src/dirent-master/: CMakeLists.txt
lib/src/glad/include/glad/: glad.h
lib/src/glad/src/: glad.c
lib/src/mio/: mio-config.cmake
lib/win64/: GameNetworkingSockets.lib
open-source-licenses/: CRCpp 2020-5-7.txt  LodePNG 2019-11-09.txt  davekoelle alphanum MIT.html  mandreyel_mio 2019-11-27.txt  stb_image 2019-12-8.txt  stuuid_2020-4-25.txt
output/runtime/requirements/: jatapt-server.json
output/symbols/: GameNetworkingSockets.exp
scripts/: clean.sh
src/: JATAPT.APS  JATAPT.rc  JATAPT.rc.in  jticon.h
src/Alcubierre/: Alcubierre.cpp  Alcubierre.h  Engine.cpp  Engine.h  FIle.h  build_info.h.in
src/Alcubierre/Debug/: Error.cpp  Error.h  Log.cpp  Log.h  Util.h
src/Alcubierre/Debug/Tripwire/: tripwire.cpp  tripwire.h
src/Alcubierre/IO/: FIleUtils.h  FileUtils.cpp
src/Alcubierre/IO/Network/: Network_Core.cpp  Network_Core.h
src/Alcubierre/Libraries/Debug/: Arguments.h  Debug_interface.cpp  Debug_interface.h  ImGui_Handler.cpp  ImGui_Handler.h  Metrics.cpp  Metrics.h
src/Alcubierre/Libraries/Debug/Console/: Console.cpp  Console_Utils.h
src/Alcubierre/Libraries/Render/: Shader.h
src/Alcubierre/Libraries/Resource/: Provider_base.h
src/Alcubierre/Libraries/Utilities/: RandomUtils.cpp  RandomUtils.h  color.h  convert.h  file.h
src/Alcubierre/Render/: Primative.h  Text.h
src/Alcubierre/Tests/: Demos.cpp  TestProgram_handler.cpp  TestProgram_handler.h
src/Experiments/: testser.cpp
src/JATAPT/: JATAPT.cpp  JATAPT.h  JATAPT_CLIENT.cpp  JATAPT_CLIENT.h  JATAPT_COMMON.cpp  JATAPT_COMMON.h  JATAPT_SERVER.cpp  JATAPT_SERVER.h
src/JATAPT/Network/: Packets.cpp  Packets.h
toolchains/: macos.cmake  windows.cmake
